fix contact form width on mobile

--- a/style.css
+++ b/style.css
@@ -505,12 +505,13 @@ nav {
     position: fixed;
     padding: 2rem 2.5rem;
     bottom: 4rem;
-    max-width: 850px;
+    width: 850px;
     background-color: var(--white);
     z-index: 5;
     left: 50%;
     transform: translateX(-50%);
     box-shadow: 0 0 .5rem rgba(0, 0, 0, 0.5);
+    max-width: 80vw;
 }
 
 .contact-overlay-form {
@@ -518,6 +519,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    overflow: hidden;
 }
 
 .contact-overlay-form h2 {
